--- a/Digtal_CV_NathanPeterson.html
+++ b/Digtal_CV_NathanPeterson.html
@@ -128,7 +128,7 @@
         <div class="sidebar">
             <p>Here is a picture of my family and a stray cat we found in Jamaica.</p>
         </div>
-        <img class="cat" src="/BA721332-B791-4A53-9477-B1612E27F1C7_1_105_c.jpeg" width="300" height="400" alt="My family">
+        <img class="cat" src="BA721332-B791-4A53-9477-B1612E27F1C7_1_105_c.jpeg" width="300" height="400" alt="My family">
            
     </div>
 <hr>
@@ -239,7 +239,7 @@
     <hr>
 
     <video class="vid" width="900" height="600" controls>
-            <source src="/Movie on 9-14-22 at 2.27 PM  2.mp4" type="video/mp4">
+            <source src="Movie on 9-14-22 at 2.27 PM  2.mp4" type="video/mp4">
         </video>
     <hr>
     <p class="contact-info">
