--- a/layout.html
+++ b/layout.html
@@ -138,9 +138,9 @@
                     </h3>
             </div>
             <div" class = "main">
-                <img class ="dougal" src="/D6A3DB8B-C58A-4CEF-9927-18AAB0C8B296_1_105_c.jpeg" height="300">
-                <img class ="piper" src="/IMG_0546 2.jpeg" height = "300">
-                <img class = "chance" src="/2C508006-939E-4E37-85C6-9534DE1EED57_1_105_c.jpeg" height = "300">
+                <img class ="dougal" src="D6A3DB8B-C58A-4CEF-9927-18AAB0C8B296_1_105_c.jpeg" height="300">
+                <img class ="piper" src="IMG_0546 2.jpeg" height = "300">
+                <img class = "chance" src="2C508006-939E-4E37-85C6-9534DE1EED57_1_105_c.jpeg" height = "300">
             </div>
         </div>
         <div class="footer">
@@ -154,7 +154,7 @@
                 </h2>   
             </div>
             <div class="rightfoot">
-                <img class="aussie" src="/Australian-Shepherd.1.jpg" width="600px">
+                <img class="aussie" src="Australian-Shepherd.1.jpg" width="600px">
             </div>
         </div>
         <hr>
